     sftp-client.c nchan.c clientloop.c sftp.c misc.c canohost.c channels.c
     ssh-keygen.c progressmeter.c uidswap.c msg.c readconf.c sshconnect.c]
     move #include <errno.h> out of includes.h; ok markus@
   - stevesk@cvs.openbsd.org 2006/07/11 20:16:43
     [ssh.c]
     cast asterisk field precision argument to int to remove warning;
     ok markus@

20060711
 - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
   openbsd-compat/daemon.c] Add includes needed by open(2).  Conditionally
   include paths.h.  Fixes build error on Solaris.
 - (dtucker) [entropy.c] More fcntl.h, this time on AIX (and probably
   others).

20060710
 - (dtucker) [INSTALL] New autoconf version: 2.60.
 - OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2006/06/14 10:50:42
     [sshconnect.c]
     limit the number of pre-banner characters we will accept; ok markus@
   - djm@cvs.openbsd.org 2006/06/26 10:36:15
     [clientloop.c]
     mention optional bind_address in runtime port forwarding setup
     command-line help. patch from santhi.amirta AT gmail.com
   - stevesk@cvs.openbsd.org 2006/07/02 17:12:58
     [ssh.1 ssh.c ssh_config.5 sshd_config.5]
     more details and clarity for tun(4) device forwarding; ok and help
     jmc@
   - stevesk@cvs.openbsd.org 2006/07/02 18:36:47
     [gss-serv-krb5.c gss-serv.c]
     no "servconf.h" needed here
     (gss-serv-krb5.c change not applied, portable needs the server options)
   - stevesk@cvs.openbsd.org 2006/07/02 22:45:59
     [groupaccess.c groupaccess.h includes.h session.c sftp-common.c sshpty.c]
     move #include <grp.h> out of includes.h
     (portable needed uidswap.c too)
   - stevesk@cvs.openbsd.org 2006/07/02 23:01:55
     [clientloop.c ssh.1]
     use -KR[bind_address:]port here; ok djm@
   - stevesk@cvs.openbsd.org 2006/07/03 08:54:20
     [includes.h ssh.c sshconnect.c sshd.c]
     move #include "version.h" out of includes.h; ok markus@
   - stevesk@cvs.openbsd.org 2006/07/03 17:59:32
     [channels.c includes.h]