@@ -40,6 +40,9 @@
      [ssh.c]
      cast asterisk field precision argument to int to remove warning;
      ok markus@
+   - stevesk@cvs.openbsd.org 2006/07/11 20:27:56
+     [authfile.c ssh.c]
+     need <errno.h> here also (it's also included in <openssl/err.h>)
 
 20060711
  - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
@@ -4889,4 +4892,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4398 2006/07/12 12:23:35 dtucker Exp $
+$Id: ChangeLog,v 1.4399 2006/07/12 12:24:22 dtucker Exp $
